k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hivebox
  namespace: hivebox
  labels:
    app: hivebox-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hivebox-api
  template:
    metadata:
      labels:
        app: hivebox-api
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
      containers:
        - name: hivebox
          image: hivebox:0.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
              ephemeral-storage: "1Gi"
            limits:
              memory: "512Mi"
              cpu: "500m"
              ephemeral-storage: "2Gi"
          readinessProbe:
            httpGet:
              path: /version
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /version
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: cache
              mountPath: /home/hiveboxusr/.cache
      volumes:
       - name: tmp
         emptyDir: {}
         sizeLimit: 128Mi
       - name: cache
         emptyDir: {} 
         sizeLimit: 256Mi
