k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hivebox-api
  labels:
    app: hivebox
    component: api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: hivebox
    component: api
